[metadata]
name = redisero
version = attr: redisero.__version__
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
    addict ==2.4.0
    black ==22.8.0
    certifi ==2022.9.24
    charset-normalizer ==2.1.1
    click ==8.1.3
    distlib ==0.3.6
    filelock ==3.8.0
    idna ==3.4
    Jinja2 ==3.1.2
    MarkupSafe ==2.1.1
    mypy-extensions ==0.4.3
    pathspec ==0.10.1
    platformdirs ==2.5.2
    requests ==2.28.1
    six ==1.16.0
    toml ==0.10.2
    tomli ==2.0.1
    urllib3 ==1.26.12
    virtualenv ==20.16.7

[options.entry_points]
console_scripts =
    redisero = redisero.__main__:main
