[metadata]
name = redisero
version = attr: redisero.__version__
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
    typer ==0.7.0
    rich ==13.0.1
    redis ==4.4.0
    pydantic ==1.10.4
    psutil ==5.9.4
    requests ==2.28.1
    PyYAML ==6.0

[options.entry_points]
console_scripts =
    redisero = redisero.__main__:main
