[metadata]
name = redisero
version = attr: redisero.__version__
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
    typer
    rich
    redis
    pydantic
    psutil
    requests
    PyYAML

[options.entry_points]
console_scripts =
    redisero = redisero.__main__:main
